--- a/vms/views/vms_order_line_view.xml
+++ b/vms/views/vms_order_line_view.xml
@@ -17,11 +17,11 @@
                     <sheet>
                         <group string="Order line">
                             <group>
-                                <field name="task_id"/>
+                                <field name="task_id" attrs="{'readonly':[('order_id', '=', False)]}"/>
                                 <field name="order_id"/>
                             </group>
                             <group>
-                                <field name="external"/>
+                                <field name="external" attrs="{'readonly':[('order_id', '=', False)]}"/>
                             </group>
                         </group>
                         <group>
@@ -36,9 +36,9 @@
                         </group>
                         <group>
                             <group string="Schedule" attrs="{'invisible':[('external','=',True)]}">
-                                <field name="start_date"/>
-                                <field name="end_date"/>
-                                <field name="duration" widget='float_time'/>
+                                <field name="start_date" attrs="{'readonly':[('order_id', '=', False)]}"/>
+                                <field name="end_date" attrs="{'readonly':[('order_id', '=', False)]}"/>
+                                <field name="duration" attrs="{'readonly':[('order_id', '=', False)]}" widget='float_time'/>
                             </group>
                             <group string="Real" attrs="{'invisible':[('external','=',True)]}">
                                 <field name="start_date_real"/>
