--- a/vms/views/vms_order_line_view.xml
+++ b/vms/views/vms_order_line_view.xml
@@ -83,11 +83,12 @@
             <field name='name'>VMS Order Line Tree View</field>
             <field name='model'>vms.order.line</field>
             <field name='arch' type='xml'>
-                <tree>
+                <tree editable="top">
                     <field name='task_id'/>
                     <field name='duration' widget='float_time'/>
                     <field name='real_duration' widget='float_time'/>
                     <field name='state'/>
+                    <field name='responsible_ids' widget="many2many_tags"/>
                 </tree>
             </field>
         </record>
