--- a/vms/views/vms_activity_time_view.xml
+++ b/vms/views/vms_activity_time_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         <record id="vms_activity_time_form" model="ir.ui.view">
             <field name="name">Maintenance Activity Time</field>
@@ -24,4 +24,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
