--- a/vms/views/wms_report_view.xml
+++ b/vms/views/wms_report_view.xml
@@ -22,17 +22,19 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
-                        <button name="action_confirmed" class="oe_highlight" states="open" string="Confirm" type="object"/>
-                        <field name="state" statusbar_visible="draft,open,confirmed,close,cancel" widget="statusbar"/>
+                        <button name="action_confirmed" class="oe_highlight" states="draft" string="Confirm" type="object"/>
+                        <button name="action_cancel" class="oe_highlight" states="draft, confirmed" string="Cancel" type="object"/>
+                        <field name="state" statusbar_visible="draft,confirmed,close,cancel" widget="statusbar"/>
                     </header>
                     <sheet>
                         <h1 class="oe_title">
+                            <label attrs="{'invisible':[('name','=', False)]}" class="oe_inline" string="Report - " style="font-size:30px;"/>
                             <field name="name" readonly="1"/>
                         </h1>
                         <group string='Details' col="4">
                             <field name='base_id'/>
-                            <field name="unit_id"/>
                             <field name="date"/>
+                            <field name="unit_id"/>
                             <field name="employee_id"/>
                             <field name="end_date" attrs="{'invisible':[('end_date','=',False)]}"/>
                             <field name="order_id" attrs="{'invisible':[('order_id','=',False)]}"/>
