--- a/vms/views/wms_report_view.xml
+++ b/vms/views/wms_report_view.xml
@@ -32,7 +32,7 @@
                             <field name="name" readonly="1"/>
                         </h1>
                         <group string='Details' col="4">
-                            <field name='base_id'/>
+                            <field name='operating_unit_id'/>
                             <field name="date"/>
                             <field name="unit_id"/>
                             <field name="employee_id"/>
