Revert "[DEL][vms_activity_time] - Logic of task control."
This reverts commit fa5c1a0eaa68866cba72e9370c1d529894c236da.

--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -47,7 +47,7 @@
                                     <field name='operating_unit_id'/>
                                     <field name="date"/>
                                     <field name="unit_id"/>
-                                    <field name="stock_location_id" domain="[('usage', '=', 'internal'),('operating_unit_id', '=', operating_unit_id)]"/>
+                                    <field name="stock_location_id"/>
                                     <field name="type"/>
                                     <field context="{'default_mechanic': True}" name="supervisor_id"/>
                                 </group>
