--- a/vms/views/vms_task_view.xml
+++ b/vms/views/vms_task_view.xml
@@ -7,8 +7,7 @@
             <field name="arch" type="xml">
                 <tree string="task">
                     <field name="name"/>
-                    <field name="duration"/>
-                    <field name="active"/>
+                    <field name="duration" widget="float_time"/>
                 </tree>
             </field>
         </record>
