--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -11,7 +11,7 @@
                     <field name="supervisor_id"/>
                     <field name="date"/>
                     <field name="current_odometer"/>
-                    <field name="stock_location_id"/>
+                    <field name="warehouse_id"/>
                     <field name="start_date"/>
                     <field name="end_date"/>
                     <field name="start_date_real"/>
@@ -37,20 +37,25 @@
                         <field name="state" statusbar_visible="draft,open,released" widget="statusbar"/>
                     </header>
                     <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button name="action_view_pickings" type="object" class="oe_stat_button" icon="fa-truck" attrs="{'invisible': [('pickings_count', '=', 0)]}">
+                                <field name="pickings_count" widget="statinfo" string="Pickings"/>
+                            </button>
+                        </div>
                         <h1 class="oe_title">
                             <label attrs="{'invisible':[('name','=', False)]}" class="oe_inline" string="Service Order - " style="font-size:30px;"/>
                             <field name="name" readonly="1"/>
                         </h1>
+                        <group col="4">
+                            <field name='operating_unit_id'/>
+                            <field name="date"/>
+                            <field name="unit_id"/>
+                            <field name="warehouse_id"/>
+                            <field name="type"/>
+                            <field name="supervisor_id" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+                        </group>
                         <notebook>
                             <page string="Service Order Detail">
-                                <group col="4">
-                                    <field name='operating_unit_id'/>
-                                    <field name="date"/>
-                                    <field name="unit_id"/>
-                                    <field name="stock_location_id"/>
-                                    <field name="type"/>
-                                    <field name="supervisor_id"/>
-                                </group>
                                 <group col="4" string="Times">
                                     <field name="start_date"/>
                                     <field attrs="{'invisible': [('start_date_real', '=', False)]}" name="start_date_real"/>
