[ADD][vms_tasks_kiosk] Added Kiosk Mode for mechanics tasks

--- a/vms/views/hr_employee_view.xml
+++ b/vms/views/hr_employee_view.xml
@@ -8,7 +8,9 @@
             <notebook position="inside">
                 <page string="VMS">
                     <group>
-                        <field name="mechanic"/>
+                        <group>
+                            <field name="mechanic"/>
+                        </group>
                     </group>
                 </page>
             </notebook>
