--- a/vms/wizards/vms_order_line_po_view.xml
+++ b/vms/wizards/vms_order_line_po_view.xml
@@ -6,9 +6,12 @@
         <field name="arch" type="xml">
             <form string="Create Purchase Order">
                 <separator colspan="4" string="Create Purchase Order from External Lines ?"/>
+                <group>
+                    <field name="partner_id"/>
+                </group> 
                 <footer>
                     <button name="make_po" string="Confirm" type="object"/>or
-                    <button class="oe_link" special="cancel" string="Cancel"/>
+                    <button special="cancel" string="Cancel"/>
                 </footer>
             </form>
         </field>
