[ADD,REF][vms_activity] refactored code to start,resume,pause and end activity, priority in order lines

--- a/vms_activity/views/vms_order_line_view.xml
+++ b/vms_activity/views/vms_order_line_view.xml
@@ -4,6 +4,9 @@
         <field name="model">vms.order.line</field>
         <field name="inherit_id" ref="vms.vms_order_line_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_id']" position="after">
+                <field modifiers="{}" name="priority" widget="priority"/>
+            </xpath>
             <xpath expr="//sheet" position="inside">
                 <group attrs="{'invisible':[('external','=',True)]}" string="Mechanics">
                     <field attrs="{'readonly':[('order_id', '=', False)]}" name="responsible_ids" nolabel="1">
