--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -31,7 +31,7 @@
                     <button name="action_cancel_draft" states="cancel" string="Set to Draft" type="object"/>
                     <button icon="fa-arrow-right" class="oe_highlight" name="action_open" states="draft" string="Open" type="object"/>
                     <button icon="fa-check-square-o" class="oe_highlight" name="action_released" states="open" string="Released" type="object"/>
-                    <button icon="fa-times" name="action_cancel" states="draft,open" string="Cancel" type="object" confirm="Are you sure to cancel this order? All the task(s) will cancel too."/>
+                    <button icon="fa-pencil-square-o" name="print_mo" string="Print MO" type="object" states="draft,open" class="oe_highlight"/>
                     <field name="state" statusbar_visible="draft,open,released" widget="statusbar"/>
                 </header>
                 <sheet>
@@ -69,8 +69,6 @@
                                 <field name="current_odometer"/>
                                 <newline/>
                                 <field name="program_id"/>
-                                <newline/>
-                                <field name="sequence"/>
                             </group>
                         </page>
                         <page string="Driver Reports Solved" attrs="{'invisible':[('type','in',(False,'preventive'))]}">
