[UPD,FIX][vms_activity_kiosk] Inactivity detection and barcode error

--- a/vms_activity_kiosk/static/src/css/style.less
+++ b/vms_activity_kiosk/static/src/css/style.less
@@ -144,3 +144,16 @@
         }
     }
 }
+
+.vms-alert {
+    padding: 3px 10px;
+    border: 1px solid;
+    width: 100%;
+
+    @media (min-width: @screen-xs-max) {
+        width: auto;
+        border-radius: 5px;
+        margin-bottom: 3px;
+        opacity: 0.5;
+    }
+}
