[ADD]vms: Add unit in stock move

--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -9,6 +9,7 @@
                 <field name="name"/>
                 <field name="supervisor_id"/>
                 <field name="date"/>
+                <field name="unit_id"/>
                 <field name="current_odometer"/>
                 <field name="warehouse_id"/>
                 <field name="start_date"/>
