--- a/vms/views/vms_order_line_view.xml
+++ b/vms/views/vms_order_line_view.xml
@@ -7,7 +7,8 @@
         <field name="arch" type="xml">
             <form string="Order lines">
                 <header>
-                    <button name="create_po" string="Create Purchase Order" type="object"/>
+                    <field name="create_purchase_order" invisible="1"/>
+                    <button name="create_po" string="Create Purchase Order" type="object" attrs="{'invisible':[('create_purchase_order','=',False)]}"/>
                     <button name="action_cancel_draft" states="cancel" string="Set to Draft" type="object"/>
                     <button name="action_process" class="oe_highlight" states="draft" string="Start" type="object"/>
                     <button name="action_cancel" states="draft,process" string="Cancel" type="object" confirm="Are you sure to cancel this task?"/>
