--- a/vms/views/vms_task_view.xml
+++ b/vms/views/vms_task_view.xml
@@ -24,7 +24,7 @@
                     </group>
                     <group string="Spare Parts">
                         <field name="spare_part_ids" nolabel="1">
-                            <tree editable="top">
+                            <tree editable="bottom">
                                 <field name="product_id" />
                                 <field name="product_qty" />
                                 <field name="product_uom_id" />
