--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -92,6 +92,7 @@
                     </h1>
                     <group name="details">
                         <group>
+                            <field name="partner_id" />
                             <field name="unit_id" />
                             <field name="type" />
                         </group>
@@ -107,6 +108,7 @@
                                 required="1"
                                 options="{'no_quick_create': True, 'no_create_edit' : True}"
                             />
+                            <field name="picking_policy" />
                         </group>
                     </group>
                     <notebook>
