--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -84,10 +84,10 @@
                             type="object"
                             class="oe_stat_button"
                             icon="fa-truck"
-                            attrs="{'invisible': [('picking_count', '=', 0)]}"
+                            attrs="{'invisible': [('pickings_count', '=', 0)]}"
                         >
                             <field
-                                name="picking_count"
+                                name="pickings_count"
                                 widget="statinfo"
                                 string="Picking(s)"
                             />
